force-app/main/default/objects/Entrega__c/Entrega__c.object-meta.xml
<CustomObject>
    <label>Entrega</label>
    <nameField>
        <displayFormat>E-{0000}</displayFormat>
        <label>Entrega Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entregas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>