force-app/main/default/objects/Entrega__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prioridade</label>
    <type>Checkbox</type>
</CustomField>