force-app/main/default/objects/Entrega__c/fields/TipoEntrega__c.field-meta.xml
<CustomField>
    <fullName>TipoEntrega__c</fullName>
    <label>Tipo de Entrega</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entrega Própria</fullName>
            </value>
            <value>
                <fullName>Entrega Express</fullName>
            </value>
            <value>
                <fullName>Entrega Terceirizada</fullName>
            </value>
            <value>
                <fullName>Retirada na Loja</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>